prevent scroll refresh event on mobile devices

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -22,4 +22,5 @@ body {
   height: 100%;
   margin: 0;
   background-color: var(--color-background);
+  overscroll-behavior: contain;
 }
